--- a/vg-stats.ipynb
+++ b/vg-stats.ipynb
@@ -89,24 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "         Publisher\n",
-       "0  Electronic Arts"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Publisher</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Electronic Arts</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+       "'Electronic Arts'"
+      ]
      },
      "metadata": {},
-     "execution_count": 37
+     "execution_count": 157
     }
    ],
    "source": [
-    "df[['Publisher']].mode()\n"
+    "most_common_publisher = df['Publisher'].mode()[0]\n",
+    "most_common_publisher"
    ]
   },
   {
@@ -118,24 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "  Platform\n",
-       "0       DS"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Platform</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>DS</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+       "'DS'"
+      ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 159
     }
    ],
    "source": [
-    "df[['Platform']].mode()"
+    "most_common_platform = df['Platform'].mode()[0]\n",
+    "most_common_platform"
    ]
   },
   {
@@ -147,24 +145,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "    Genre\n",
-       "0  Action"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Genre</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Action</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+       "'Action'"
+      ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 161
     }
    ],
    "source": [
-    "df[['Genre']].mode()"
+    "most_common_genre = df['Genre'].mode()[0]\n",
+    "most_common_genre"
    ]
   },
   {
@@ -176,11 +173,12 @@
   },
   {
    "source": [
-    "df[['Name','Global_Sales']].sort_values('Global_Sales', ascending =False).head(20).set_index(\"Global_Sales\")"
+    "top_twenty_highest_grossing_games = df[['Name','Global_Sales']].sort_values('Global_Sales', ascending =False).head(20).set_index(\"Global_Sales\")\n",
+    "top_twenty_highest_grossing_games"
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 31,
+   "execution_count": 162,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -212,7 +210,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n    </tr>\n    <tr>\n      <th>Global_Sales</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>82.74</th>\n      <td>Wii Sports</td>\n    </tr>\n    <tr>\n      <th>40.24</th>\n      <td>Super Mario Bros.</td>\n    </tr>\n    <tr>\n      <th>35.82</th>\n      <td>Mario Kart Wii</td>\n    </tr>\n    <tr>\n      <th>33.00</th>\n      <td>Wii Sports Resort</td>\n    </tr>\n    <tr>\n      <th>31.37</th>\n      <td>Pokemon Red/Pokemon Blue</td>\n    </tr>\n    <tr>\n      <th>30.26</th>\n      <td>Tetris</td>\n    </tr>\n    <tr>\n      <th>30.01</th>\n      <td>New Super Mario Bros.</td>\n    </tr>\n    <tr>\n      <th>29.02</th>\n      <td>Wii Play</td>\n    </tr>\n    <tr>\n      <th>28.62</th>\n      <td>New Super Mario Bros. Wii</td>\n    </tr>\n    <tr>\n      <th>28.31</th>\n      <td>Duck Hunt</td>\n    </tr>\n    <tr>\n      <th>24.76</th>\n      <td>Nintendogs</td>\n    </tr>\n    <tr>\n      <th>23.42</th>\n      <td>Mario Kart DS</td>\n    </tr>\n    <tr>\n      <th>23.10</th>\n      <td>Pokemon Gold/Pokemon Silver</td>\n    </tr>\n    <tr>\n      <th>22.72</th>\n      <td>Wii Fit</td>\n    </tr>\n    <tr>\n      <th>22.00</th>\n      <td>Wii Fit Plus</td>\n    </tr>\n    <tr>\n      <th>21.82</th>\n      <td>Kinect Adventures!</td>\n    </tr>\n    <tr>\n      <th>21.40</th>\n      <td>Grand Theft Auto V</td>\n    </tr>\n    <tr>\n      <th>20.81</th>\n      <td>Grand Theft Auto: San Andreas</td>\n    </tr>\n    <tr>\n      <th>20.61</th>\n      <td>Super Mario World</td>\n    </tr>\n    <tr>\n      <th>20.22</th>\n      <td>Brain Age: Train Your Brain in Minutes a Day</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 162
     }
    ]
   },
@@ -225,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -271,11 +269,11 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Rank</th>\n      <th>Name</th>\n      <th>Platform</th>\n      <th>Year</th>\n      <th>Genre</th>\n      <th>Publisher</th>\n      <th>NA_Sales</th>\n      <th>EU_Sales</th>\n      <th>JP_Sales</th>\n      <th>Other_Sales</th>\n      <th>Global_Sales</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>446</th>\n      <td>447</td>\n      <td>Dragon Warrior IV</td>\n      <td>NES</td>\n      <td>1990.0</td>\n      <td>Role-Playing</td>\n      <td>Enix Corporation</td>\n      <td>0.08</td>\n      <td>0.00</td>\n      <td>3.03</td>\n      <td>0.01</td>\n      <td>3.12</td>\n    </tr>\n    <tr>\n      <th>497</th>\n      <td>498</td>\n      <td>World Soccer Winning Eleven 7 International</td>\n      <td>PS2</td>\n      <td>2003.0</td>\n      <td>Sports</td>\n      <td>Konami Digital Entertainment</td>\n      <td>0.08</td>\n      <td>1.24</td>\n      <td>1.13</td>\n      <td>0.45</td>\n      <td>2.90</td>\n    </tr>\n    <tr>\n      <th>1617</th>\n      <td>1619</td>\n      <td>Farming Simulator 2015</td>\n      <td>PC</td>\n      <td>2014.0</td>\n      <td>Simulation</td>\n      <td>Focus Home Interactive</td>\n      <td>0.08</td>\n      <td>1.02</td>\n      <td>0.00</td>\n      <td>0.13</td>\n      <td>1.23</td>\n    </tr>\n    <tr>\n      <th>1926</th>\n      <td>1928</td>\n      <td>Pro Evolution Soccer 2008</td>\n      <td>X360</td>\n      <td>2007.0</td>\n      <td>Sports</td>\n      <td>Konami Digital Entertainment</td>\n      <td>0.08</td>\n      <td>0.90</td>\n      <td>0.04</td>\n      <td>0.05</td>\n      <td>1.07</td>\n    </tr>\n    <tr>\n      <th>2067</th>\n      <td>2069</td>\n      <td>Winning Eleven: Pro Evolution Soccer 2007 (All...</td>\n      <td>X360</td>\n      <td>2006.0</td>\n      <td>Sports</td>\n      <td>Konami Digital Entertainment</td>\n      <td>0.08</td>\n      <td>0.90</td>\n      <td>0.02</td>\n      <td>0.00</td>\n      <td>1.00</td>\n    </tr>\n    <tr>\n      <th>2373</th>\n      <td>2375</td>\n      <td>Phantasy Star Portable 2</td>\n      <td>PSP</td>\n      <td>2009.0</td>\n      <td>Role-Playing</td>\n      <td>Sega</td>\n      <td>0.08</td>\n      <td>0.11</td>\n      <td>0.62</td>\n      <td>0.06</td>\n      <td>0.88</td>\n    </tr>\n    <tr>\n      <th>2579</th>\n      <td>2581</td>\n      <td>The Sims 2: Castaway</td>\n      <td>PSP</td>\n      <td>2007.0</td>\n      <td>Simulation</td>\n      <td>Electronic Arts</td>\n      <td>0.08</td>\n      <td>0.46</td>\n      <td>0.00</td>\n      <td>0.25</td>\n      <td>0.80</td>\n    </tr>\n    <tr>\n      <th>3186</th>\n      <td>3188</td>\n      <td>SingStar Queen</td>\n      <td>PS2</td>\n      <td>2009.0</td>\n      <td>Misc</td>\n      <td>Sony Computer Entertainment</td>\n      <td>0.08</td>\n      <td>0.12</td>\n      <td>0.00</td>\n      <td>0.44</td>\n      <td>0.63</td>\n    </tr>\n    <tr>\n      <th>3503</th>\n      <td>3505</td>\n      <td>Top Spin 3</td>\n      <td>PS3</td>\n      <td>2008.0</td>\n      <td>Action</td>\n      <td>Take-Two Interactive</td>\n      <td>0.08</td>\n      <td>0.37</td>\n      <td>0.00</td>\n      <td>0.12</td>\n      <td>0.57</td>\n    </tr>\n    <tr>\n      <th>3703</th>\n      <td>3705</td>\n      <td>Sonic &amp; All-Stars Racing Transformed</td>\n      <td>PS3</td>\n      <td>2012.0</td>\n      <td>Racing</td>\n      <td>Sega</td>\n      <td>0.08</td>\n      <td>0.33</td>\n      <td>0.01</td>\n      <td>0.11</td>\n      <td>0.54</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 85
+     "execution_count": 172
     }
    ],
    "source": [
-    "df[['NA_Sales']].median()\n",
+    "na_median_sales = df['NA_Sales'].median()\n",
     "df[df['NA_Sales'] == .08].head(10)"
    ]
   },
@@ -400,10 +398,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Success!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test():\n",
+    "\n",
+    "    def assert_equal(actual,expected):\n",
+    "        assert actual == expected, f\"Expected {expected} but got {actual}\"\n",
+    "\n",
+    "    assert_equal(most_common_publisher, \"Electronic Arts\")\n",
+    "    assert_equal(most_common_platform, \"DS\")\n",
+    "    assert_equal(most_common_genre, \"Action\")\n",
+    "    assert_equal(top_twenty_highest_grossing_games.iloc[0].Name, 'Wii Sports')\n",
+    "    assert_equal(top_twenty_highest_grossing_games.iloc[19].Name, 'Brain Age: Train Your Brain in Minutes a Day')\n",
+    "    assert_equal(na_median_sales, .08)\n",
+    "    assert_equal(difference, 161963.0)\n",
+    "    assert_equal(percent, 30.0)\n",
+    "\n",
+    "    print(\"Success!!!\")\n",
+    "\n",
+    "test()"
+   ]
   },
   {
    "cell_type": "code",
